examples/test/testpolicy11005.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11005
  namespace: namespace443
spec:
  podSelector:
    matchLabels:
      key28: value29
      key29: value13
      key17: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value27
      podSelector:
        matchLabels:
          key19: value40
